--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "iron-session": "^6.3.1",
-    "next": "12.3.0",
+    "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0"
