Add second digit riddle

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 ENTRY_PASSWORD=<TODO>
 SESSION_SECRET=<TODO>
 SOLUTION=<TODO: full three-digit code>
-FIRST_DIGIT_PASSWORD=<TODO>
+DIGIT_1_PASSWORD=<TODO>
+DIGIT_2_PASSWORD=<TODO>
+DIGIT_3_PASSWORD=<TODO>
