Adjust env vars

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 ENTRY_PASSWORD=<TODO>
 SESSION_SECRET=<TODO>
 SOLUTION=<TODO: full three-digit code>
-DIGIT_1_PASSWORD=<TODO>
-DIGIT_2_PASSWORD=<TODO>
-DIGIT_3_PASSWORD=<TODO>
+DIGIT_1_MORSE_HINT=<TODO>
+DIGIT_1_PASSWORD_REGEX=<TODO>
+DIGIT_2_PASSWORD_REGEX=<TODO>
+DIGIT_3_PASSWORD_REGEX=<TODO>
